tests/baselines/reference/decoratorOnClassProperty11.errors.txt
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts(4,5): error TS1236: The return type of a property decorator function must be either 'void' or 'any'.
  Unable to resolve signature of property decorator when called as an expression.
tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts(4,5): error TS1240: Unable to resolve signature of property decorator when called as an expression.
  Supplied parameters do not match any signature of call target.


==== tests/cases/conformance/decorators/class/property/decoratorOnClassProperty11.ts (2 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string) => void;
    
    class C {
        @dec prop;
        ~~~~
!!! error TS1236: The return type of a property decorator function must be either 'void' or 'any'.
!!! error TS1236:   Unable to resolve signature of property decorator when called as an expression.
        ~~~~
!!! error TS1240: Unable to resolve signature of property decorator when called as an expression.
!!! error TS1240:   Supplied parameters do not match any signature of call target.
    }